spacing fixed in secondary header

--- a/src/containers/collectionLanding/styles.scss
+++ b/src/containers/collectionLanding/styles.scss
@@ -41,7 +41,7 @@
 .inner-header {
     display: -webkit-inline-box;
     margin-left: 8%;
-    margin-top: 3px;
+    margin-top: 7px;
 }
 
 .collection-block {
