--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -55,7 +55,7 @@
 .inner-header {
     display: -webkit-inline-box;
     margin-left: 8%;
-    margin-top: 3px;
+    margin-top: 7px;
 }
 
 .subc-header{
